clean up UserTasks
